first try implementing permissions check
