# openapi.yaml
@@ -611,7 +611,21 @@ paths:
       responses:
         '200':
           description: AWS Account updated
-      
+  /api/aws-accounts/{awsAccountUUID}/permissions:
+    get:
+      tags:
+        - admins
+        - AwsAccounts
+      summary: Get permissions for an AWS account from CFN stack
+      operationId: getAwsAccountPermissions
+      description: |
+        Get permissions for an AWS account from CFN stack
+      requestBody:
+        description: AWS Account information
+        content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/GetAwsAccountPermissions'
   /api/accounts:
     get:
       tags:
@@ -2963,6 +2977,13 @@ components:
           type: string
           minLength: 1
           example: 'ExternalId'
+    GetAwsAccountPermissions:
+      required:
+        - accountId
+      type: object
+      properties:
+        accountId:
+          $ref: '#/components/schemas/AwsAccountId'
     UpdateAccountRequest:
       required:
         - id
